[package]
name = "ckb-vm-aot"
description = "CKB's Virtual machine"
version = "0.22.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.61.0"
exclude = ["/benches", "/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { version = "0.22.0", features = ["asm"] }
ckb-vm-definitions = { version = "0.22.0" }
derive_more = "0.99.2"
goblin_v023 = { package = "goblin", version = "=0.2.3" }
goblin_v040 = { package = "goblin", version = "=0.4.0" }
libc = "0.2.47"
memmap = { package ="memmap2", version = "0.5" }
scroll = "0.10"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "vm_benchmark"
path = "benches/vm_benchmark.rs"
harness = false
